2018-03-11 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSSliderCell.h,
	* Source/NSSliderCell.m: Rewrite this class to store and access
	the value directly. This brings the behaviour closer to Apple's
	horrible implementation.

2018-02-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSegmentedCell.m (-startTrackingAt:inView:,
	-continueTracking:at:inView:): Add this methods to enable
	tracking for this class.
	Patch suggested by Josh Freeman <pikopixel@twilightedge.com>.

2018-02-27 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSTheme.h,
	* Source/GSThemeDrawing.m: Correct int/NSInteger mismatch detected
	by Josh Freeman <pikopixel@twilightedge.com>.

2018-02-25 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSKeyValueBinding.h,
	* Source/NSKeyValueBinding.m: Add helper function NSIsControllerMarker.

2018-02-09 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSDisplayServer.m: Store the current display server in a
	static variable and not in a thread variable.
	Idea by Yavor Doganov  <yavor@gnu.org>

2018-02-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSHorizontalTypesetter.m (-layoutLineNewParagraph:): Make
	sure nominal gets always set.

2018-02-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAlert.m (NSBeginAlertSheet): Move closing the sheet from
	here...
	* Source/NSApplication.m (-beginSheet:...:contextInfo:): ...to here.

2018-01-29 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/speech/GNUmakefile,
	* configure.ac: Give up on dynamic library detecion.
	* configure: Regnerate

2018-01-29 Fred Kiefer <FredKiefer@gmx.de>

	* configure.ac: Correct last commit.
	* configure: Regnerate

2018-01-28 Fred Kiefer <FredKiefer@gmx.de>

	* configure.ac: Improve checks for flite.
	* configure: Regnerate
	* Tools/speech/GNUmakefile: Use variables for flite libraries.
	* Tools/speech/FliteSpeechEngine.m: Switch to use register_cmu_us_kal16.

2018-01-24 Fred Kiefer <FredKiefer@gmx.de>

	* Printing/GSCUPS/GSCUPSPrintOperation.m: