@@ -1,3 +1,7 @@
+2018-03-29  Graham Lee  <graham@iamleeg.com>
+
+	* Source/NSWindowController.m: gsdoc
+
 2018-03-11 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Headers/AppKit/NSSliderCell.h,
